@@ -1,5 +1,6 @@
 1.2
  * Added WS Watch
+ * Added display of standby repurposed pages
 
 1.1
  * Fixed ETW crash
